--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,24 @@
 <resources>
     <string name="app_name">Цели</string>
-    <string name="crime_title_hint">Напишите текст цели.</string>
-    <string name="crime_title_label">Текст</string>
-    <string name="crime_details_label">Дата ожидания результата</string>
-    <string name="crime_solved_label">Выполнено?</string>
+    <string name="target_title_hint">Напишите текст цели.</string>
+    <string name="target_title_label">Текст</string>
+    <string name="target_details_label">Дата ожидания результата</string>
+    <string name="target_solved_label">Выполнено?</string>
     <string name="date_picker_title">Дата ожидаемого результата:</string>
-    <string name="new_crime">Новая заметка</string>
-    <string name="delete_crime">Удалить цель</string>
+    <string name="new_target">Новая заметка</string>
+    <string name="delete_target">Удалить цель</string>
     <string name="show_subtitle">Показать количество целей</string>
     <string name="hide_subtitle">Скрыть количество целей</string>
     <string name="subtitle_format">%1$s цели</string>
-    <string name="not_crimes">Добавьте новую цель!</string>
-    <string name="crime_suspect_text">Choose Suspect</string>
-    <string name="crime_report_text">Send Crime Report</string>
-    <string name="crime_report">%1$s! The target was discovered on %2$s. %3$s, and %4$s</string>
-    <string name="crime_report_solved">The case is solved</string>
-    <string name="crime_report_unsolved">The case is not solved</string>
-    <string name="crime_report_no_suspect">there is not suspect.</string>
-    <string name="crime_report_suspect">the suspect is %s.</string>
-    <string name="crime_report_subject">CriminalIntent Crime Report</string>
+    <string name="not_targets">Добавьте новую цель!</string>
+    <string name="target_collaboration_text">Добавить исполнителя</string>
+    <string name="target_report_text">Отправить другу</string>
+    <string name="target_report">%1$s! The target was discovered on %2$s. %3$s, and %4$s</string>
+    <string name="target_report_solved">The case is solved</string>
+    <string name="target_report_unsolved">The case is not solved</string>
+    <string name="target_report_no_collaboration">there is not suspect.</string>
+    <string name="target_report_collaborated">the suspect is %s.</string>
+    <string name="target_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send target report via</string>
     <string name="btStart">Start Repeating Timer</string>
     <string name="menu_settings">Settings</string>
